# lpn

./: .gitignore  README.md  env_setup.sh  setup_klee.sh
language/: pyproject.toml
language/src/lpnlang/: __init__.py  lpn_expr.py  lpn_extension.py  lpn_place.py  lpn_simulate.py  lpn_token.py  lpn_transition.py  lpn_utils.py
language/src/lpnlang/lpn2pi/: __init__.py  cst_string.py  extension.py  gen_pi.py  helper.py  helper_with_pip.py  input_classes.py  lpn_pi.py  pi_simulate.py  pi_walk_seq.py
language/src/lpnlang/lpn2sim/: __init__.py  emitcpp.py  emitcpp_const_str.py
language/src/lpnlang/lpn2smt/: __init__.py  conversion_func.py  extension.py  helper.py  input_classes.py  lpn_simulate.py  lpn_smt.py  misc_helper.py  params.py  smt_walk_seq.py  z3_util.py
language/src/lpnlang/lpn2visual/: __init__.py  lpn_html.py  lpn_html_graph_only.py  lpn_video.py
language/src/lpnlang/symbex/: __init__.py  no_symbex.py  symbex_sim_cst_str.py  translate.py
lpn_examples/darwin/: Makefile  place_types.txt  run_pi.py  run_sim.py  run_translate.py
lpn_examples/jpeg_decoder/: Makefile  run_pi.py  run_pi_oneclass.py  run_sim.py  run_smt.py  run_translate.py  run_visual.py
lpn_examples/menshen/: Makefile  place_types.txt  run_pi.py  run_sim.py  run_translate.py
lpn_examples/pcie_topo/: Makefile  param_x8.py  run_sim.py  run_translate.py
lpn_examples/protoacc/: Makefile  lpn_message.json  place_types.txt  run_pi.py  run_pi_oneclass.py  run_sim.py  run_smt.py  run_translate.py  test.py
lpn_examples/vta/: Makefile  reference.insns  run_sim.py  (+3 more)
patches/: lpn_klee.patch
(+105 files in other folders)
