[project]
name = "lpnlang"
version = "0.0.1"
authors = [
  { name="Jiacheng Ma", email="mjc97cooper@gmail.com" },
]
description = "Lpn language package"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
